delete all stake text and some other changes

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -68,11 +68,13 @@
   "walletMultiChainNFTSupport": "Wallet Multi-chain NFT Support",
   "Q1Hint": "Are you looking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "powerfulAndStable": "Powerful & Stable Wallet SDK for Developers",
-  "seamlessAccess": "Seamless Access to All Things DeFi With CLV",
-  "seamlessAccessHint": "Like NFTs, Decentralized Finance is one aspect of the cryptocurrency space that changes how assets work and how we access financial services. With DeFi, users can easily lend, borrow, save, and even stake assets for extra income. DeFi comprises a series of services that aim to make financial services accessible to anyone with an internet connection.",
-  "CLVQuarterly": "CLV Quarterly Wrap-Up — A Look Into Q3 2022",
-  "CLVQuarterlyHint": "Q3 was a extremely busy month in terms of partnership, expansion, developments and more. It has been a quarter of intensive work on the ground to expand more use-cases for CLV Wallet and making it a must-have web3 wallet to connect with applications/protocols across verticles including but DeFi, Gaming, and Web3.",
+  "CLVWalletNow": "CLV Wallet Now Supports BTC Ordinals",
+  "CLVWalletNowHint": "We’re thrilled to announce that CLV Wallet, the leading multi-chain web3 wallet, has added support for Bitcoin Ordinals, making us one of the first wallets to do so!",
+  "theShortMonth": "The Short Month that Packed a Punch: A Recap of CLV’s February 2023",
+  "theShortMonthHint": "February 2023 was a busy month for CLV, with a range of updates and developments to the CLV ecosystem.",
   "CLVWalletAssetStaking": "CLV Wallet Asset Staking",
+  "sayHello": "Say Hello to the New Member of CLV Ecosystem: Introducing Wallet Talk by CLV",
+  "sayHelloHint": "The future of crypto-transactions — Connect, Chat & Transact",
   "CLVWalletSupport": "CLV Wallet ENS/DID Support",
   "upgradeToCrossChainExplorer": "Upgrade to Cross-Chain Explorer",
   "supportDApps": "Support dApps Interaction for Major Blockchains",
@@ -121,15 +123,15 @@
   "crossChainExplorerHint": "Use it to view all information on cross-chain transactions, including all transactions, cross-chain volume in $CLV, number of participating addresses, cross-chain free, and more. ",
   "EVMBridge": "EVM Bridge",
   "EVMBridgeHint": "Transfering your CLV made simple. Use this tool to move your CLV Token to compatible blockchains - including Etherium Mainnet and BNB Chain.",
-  "CLVPortalHint": "One Portal for all services. Use our new portal to send, receive, and buy CLV. Plus, use it to Stake, Swap, and Transfer coins. Take advantage of our high APY % on staking!",
-  "CLVPortalHint2": "CLV Portal is the official portal of the CLV blockchain. It contains \nessential component for users to manage their CLV tokens, take part in CLV staking, swap and bridge CLV tokens.",
+  "CLVPortalHint": "The official portal of the CLV blockchain. Find all our essential features for users to manage their CLV tokens - connect your wallet and enter our dApp explorer to get the full DeFi experience.",
+  "CLVPortalHint2": "CLV Portal an easily-accessible on-chain management interface. Check out our new dApp explorer experience.",
   "CLVScan": "CLV Scan",
   "CLVScanHint": "Keep track of transactions - easy to use and track. Search by address, Txn Hash, Block, or Token. Total financial transparency.  ",
   "visitTheSolution": "Visit The Solution",
   "visitCLVPortal": "Visit CLV Portal",
   "CLVToken": "CLV Token",
   "CLVTokenTitle": "the native token of the CLV Chain.",
-  "CLVTokenHint": "Used for staking to participate in Network Consensus, Transaction fees, Platform rewards, and Network Governance.",
+  "CLVTokenHint": "Used to participate in Network Consensus, Gas fees, and Network Governance.",
   "CLVIsAvailable": "CLV is available on ",
   "FAQ’s": "FAQ’s",
   "introducingCrypto": "Introducing crypto’s most compatible wallet",
@@ -145,14 +147,14 @@
   "crossChainCompatibilityHint1": "Featuring multi-chain dApp intercative support for all EVM networks, Polkadot & Kusama Parachains and Solana.",
   "crossChainCompatibilityHint2": "Ideal solution for multiple functionalty and connectivity between networks.",
   "getTheExtension": "Get The Extension",
-  "extensionWallet": "Extension wallet",
   "DcentralizedFinance": "Decentralized finance in the palm of your hands.",
-  "DcentralizedFinanceHint1": "Transfer, Swap and Stake your favorite coins. Store your collectibles all in one place - we support NFTs from Ethereum and Solana!",
+  "DcentralizedFinanceHint1": "Transfer and Swap your favorite coins. Store your collectibles in one place - we support NFTs from Ethereum, Solana!",
   "DcentralizedFinanceHint2": "Enjoy a seamless DeFi experience with the ability to browse all kinds of dApps.",
   "appStore": "App store for decentralized Finance",
   "appStoreHint": "Enjoy a seamless DeFi experience with the abilty to browse all kinds of dApps such as derivatives or laans deployed on CLV",
   "onePortalOfAll": "One Portal for all services.",
-  "onePortalOfAllHint": "Use our new portal to send, receive, and buy CLV. Plus, use it to Stake, Swap, and Transfer coins. Take advantage of our high APY % on staking!",
+  "onePortalOfAllHint": "Use the CLV Portal to send and receive $CLV. Connect to your CLV wallet and try our new dApp explorer and enjoy the full DeFi experience.",
+  "onePortalOfAllHint1": "Access the blockchain explorers to keep track of all transactions - full transparency.",
   "importAndCreate": "Import & Create wallet flexibly",
   "importAndCreateHint": "An «Always-on» functionality that allows users to simultaneously connect with Web3JS-based dApps and PlkadotJS-based dApps and onteract with all kinds of multi-chain cryptocurrencies and NFT assets.",
   "exploreNow": "Explore Now",
