change content of  News & Update

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -68,13 +68,13 @@
   "walletMultiChainNFTSupport": "Wallet Multi-chain NFT Support",
   "Q1Hint": "Are you looking for a better wallet for your dApps? You are in the right place, reach out to use and find out how to integrate the CLV wallet",
   "powerfulAndStable": "Powerful & Stable Wallet SDK for Developers",
-  "CLVWalletNow": "CLV Wallet Now Supports BTC Ordinals",
-  "CLVWalletNowHint": "We’re thrilled to announce that CLV Wallet, the leading multi-chain web3 wallet, has added support for Bitcoin Ordinals, making us one of the first wallets to do so!",
-  "theShortMonth": "The Short Month that Packed a Punch: A Recap of CLV’s February 2023",
-  "theShortMonthHint": "February 2023 was a busy month for CLV, with a range of updates and developments to the CLV ecosystem.",
+  "CLVWalletNow": "CLV Monthly Update, May 2023: A Month of Thrilling Milestones",
+  "CLVWalletNowHint": "We had an amazing month at CLV, as we ventured into new possibilities and opportunities in the Web3 space.",
+  "theShortMonth": "CLV Wallet Integrates PolygonID to create a trustless, secure and privacy-preserving framework for Crypto Transactions",
+  "theShortMonthHint": "Today, we’re excited to announce the integration of PolygonID into CLV Wallet. This integration will bring new levels of security, privacy and convenience to crypto enthusiasts worldwide.",
+  "sayHello": "CLV Scan Reloaded: A New and Improved Blockchain Explorer",
+  "sayHelloHint": "We’re excited to announce that we have released the new version of CLV Scan at https://scan.clv.org/ which replaces the current CLV Scan site at https://clvscan.com/.",
   "CLVWalletAssetStaking": "CLV Wallet Asset Staking",
-  "sayHello": "Say Hello to the New Member of CLV Ecosystem: Introducing Wallet Talk by CLV",
-  "sayHelloHint": "The future of crypto-transactions — Connect, Chat & Transact",
   "CLVWalletSupport": "CLV Wallet ENS/DID Support",
   "upgradeToCrossChainExplorer": "Upgrade to Cross-Chain Explorer",
   "supportDApps": "Support dApps Interaction for Major Blockchains",
